welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:13: error: not found: value worldHeight
  for (i <- 0 to worldHeight - 1) {
                 ^Array2:17: error: not found: value worldHeight
  backward(worldHeight-1);
           ^