welcome.lessons.welcome.array.basics.Array2.scala.code


override def run() {
  var worldHeight:Int = getWorldHeight()
  var colors = new Array[Color](worldHeight);
  colors = read();
}


def read():Array[Color] = {
  var colors = new Array[Color](getWorldHeight());
  
  for (i <- 0 to worldHeight - 1) {
    colors(i) = getGroundColor();
    forward()
  }
  backward(worldHeight-1);
  
  println(colors )
  return colors;
}